--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,7 @@
             font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
             padding: 1rem;
             transition: background-color 0.3s ease, color 0.3s ease;
+            position: relative;
         }
 
         /* Темная тема */
@@ -30,7 +31,6 @@
         }
         body.dark-theme #theme-toggle:hover { background-color: #333; }
         
-        /* Стили для баннера в темной теме */
         body.dark-theme .banner-wrapper {
             border-color: #e0e0e0;
             opacity: 0.9;
@@ -49,6 +49,7 @@
             overflow: hidden; 
             position: relative;
             background-color: #f0f0f0;
+            z-index: 1;
         }
 
         .site-banner {
@@ -114,6 +115,8 @@
             max-width: 50rem;
             font-size: 1.2rem;
             line-height: 1.6;
+            position: relative;
+            z-index: 10;
         }
 
         h2 {
@@ -135,17 +138,31 @@
             cursor: pointer;
             font-weight: bold;
             font-size: 0.9rem;
-            z-index: 10;
+            z-index: 20;
         }
         #theme-toggle:hover {
             background-color: black;
             color: white;
+        }
+
+        /* СНЕГ */
+        #snow-canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 5;
         }
     </style>
 </head>
 <body>
 
     <button id="theme-toggle">☾ Тема</button>
+
+    <!-- Холст для снега -->
+    <canvas id="snow-canvas"></canvas>
 
     <!-- БАННЕР -->
     <div class="banner-wrapper">
@@ -188,6 +205,71 @@
             const isDark = body.classList.contains('dark-theme');
             localStorage.setItem('theme', isDark ? 'dark' : 'light');
         });
+
+        // --- СКРИПТ СНЕГА ---
+        const canvas = document.getElementById('snow-canvas');
+        const ctx = canvas.getContext('2d');
+        let width, height;
+        let particles = [];
+
+        function resize() {
+            width = canvas.width = window.innerWidth;
+            height = canvas.height = window.innerHeight;
+        }
+
+        function initSnow() {
+            resize();
+            window.addEventListener('resize', resize);
+            for(let i = 0; i < 60; i++) {
+                particles.push({
+                    x: Math.random() * width,
+                    y: Math.random() * height,
+                    r: Math.random() * 3 + 1,
+                    d: Math.random() * 50
+                });
+            }
+            drawSnow();
+        }
+
+        let angle = 0;
+        function drawSnow() {
+            ctx.clearRect(0, 0, width, height);
+            const isDark = body.classList.contains('dark-theme');
+            ctx.fillStyle = isDark ? "rgba(255, 255, 255, 0.8)" : "rgba(100, 100, 100, 0.3)";
+            
+            ctx.beginPath();
+            for(let i = 0; i < particles.length; i++) {
+                const p = particles[i];
+                ctx.moveTo(p.x, p.y);
+                ctx.arc(p.x, p.y, p.r, 0, Math.PI * 2, true);
+            }
+            ctx.fill();
+            updateSnow();
+            requestAnimationFrame(drawSnow);
+        }
+
+        function updateSnow() {
+            angle += 0.01;
+            for(let i = 0; i < particles.length; i++) {
+                const p = particles[i];
+                p.y += Math.cos(angle + p.d) + 1 + p.r / 2;
+                p.x += Math.sin(angle) * 2;
+
+                if(p.x > width + 5 || p.x < -5 || p.y > height) {
+                    if(i % 3 > 0) {
+                        particles[i] = {x: Math.random() * width, y: -10, r: p.r, d: p.d};
+                    } else {
+                        if(Math.sin(angle) > 0) {
+                            particles[i] = {x: -5, y: Math.random() * height, r: p.r, d: p.d};
+                        } else {
+                            particles[i] = {x: width + 5, y: Math.random() * height, r: p.r, d: p.d};
+                        }
+                    }
+                }
+            }
+        }
+
+        initSnow();
     </script>
 </body>
 </html>
