--- a/projects.html
+++ b/projects.html
@@ -180,6 +180,7 @@
         <a href="index.html">Главная</a>
         <a href="info.html">Информация</a>
         <a href="projects.html" class="active">Проекты</a>
+        <a href="posts.html">Посты</a>
     </nav>
 
     <div class="content">
